--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -244,9 +244,10 @@
         "    international_titles_list = \"ls560608427\"\n",
         "    indian_titles_list= \"ls560456074\"\n",
         "    animation_titles_list = \"ls560333050\"\n",
+        "    watch_list = \"ls021271524\" # original ls021271524 or https://www.imdb.com/user/ur84959930/watchlist\n",
         "    watched_movies_list_id =\"ls047519430\"\n",
-        "    watched_movies_list = []\n",
         "    watched_series_list = \"ls047701980\"\n",
+        "    watched_movies_list = []\n",
         "    movie_skip_list = \"\"\n",
         "\n",
         "if not 'config' in globals():\n",
@@ -922,6 +923,7 @@
         "    total_wanted = total_up = total_progress = active_down = active_up = completed_up = completed_down = 0\n",
         "    total_downloads= downloadings = deads = transferings = completed = 0\n",
         "    addresults = []\n",
+        "    bulksearch = None\n",
         "    searchresults = []\n",
         "    backthreads = {}\n",
         "    clicktasks = []\n",
@@ -952,7 +954,6 @@
         "        import ftputil \n",
         "    check_pip_pgks_installed(reqs, True)\n",
         "\n",
-        "\n",
         "#### Init / Pathes\n",
         "\n",
         "done_path = \"/content/done\"\n",
@@ -982,21 +983,17 @@
         "\n",
         "SUCCUSS = 200\n",
         "FAIL = 300\n",
-        "\n",
         "GENERAL = 101\n",
         "SOFTWARE = 102\n",
         "GAMES = 103\n",
-        "\n",
         "MOVIE = 201\n",
         "TV = 300\n",
         "SHOW = 301\n",
         "SEASON = 302\n",
         "EPISODE = 303\n",
-        "\n",
         "MUSIC = 401\n",
         "ALBUM = 402\n",
         "TRACK = 403\n",
-        "\n",
         "X1337X = '1337x'\n",
         "IMDB = 'IMDB'\n",
         "RARBG = 'rarbg'\n",
@@ -1025,12 +1022,10 @@
         "\n",
         "X1337XPROXEY_BASE = 'https://1337x.unblockit.esq'\n",
         "X1337X_BASE = 'https://1337x.to'\n",
-        "\n",
         "X1337X_TV = \"TV\"\n",
         "X1337X_MOVIES = \"Movies\"\n",
         "X1337X_APPS = \"Apps\"\n",
         "X1337X_GAMES = \"Games\"\n",
-        "\n",
         "X1337X_SEEDERS = \"seeders/desc\"\n",
         "X1337X_SIZE_ASC = \"size/asc\"\n",
         "X1337X_SIZE_DESC = \"size/desc\"\n",
@@ -1072,11 +1067,9 @@
         "## IMDB\n",
         "\n",
         "IMDB_BASE = \"https://www.imdb.com\"\n",
-        "\n",
         "IMDB_MOVIE_TITLE = \"feature\"\n",
         "IMDB_TV_TITLE = \"tv_series\"\n",
         "IMDB_ANY_TITLE = \"\"\n",
-        "\n",
         "IMDB_URI_HEAD = \"https://www.imdb.com/title/\"    \n",
         "IMDB_EXCULDE_MARK=\"%21\"\n",
         "IMDB_DATE_SORT = \"release_date\"\n",
@@ -1132,6 +1125,7 @@
         "l337xpages_pt = re.compile(r'(?<=/)\\d+(?=/)')\n",
         "stars_pt = re.compile(r\"(?<=Stars:)<a href.*</a>\")\n",
         "director_pt = re.compile(r\"(((?<=Director:)<a href.*</a>)|((?<=Directors:)<a href.*</a>))(?=<span)\")\n",
+        "split_musictitle_pt = re.compile(r\"[\\[\\]\\(]\")\n",
         "\n",
         "class DownloadAttrs:\n",
         "    def __init__(self, type_ = GENERAL, existing_mode = False, backup = False, save_name = \"\", sequential= False, \n",
@@ -1326,7 +1320,7 @@
         "    downloaded = False\n",
         "    watched = False\n",
         "\n",
-        "class DownloadResult:\n",
+        "class DownloadResult: \n",
         "    def __init__(self, resulturl= \"\", size = 0, date = \"\", seeders = \"\", leechers = \"\", uploader = \"\", href = \"\", downloaded= False, watched= False, attrs= None):\n",
         "        self.resulturl = resulturl\n",
         "        self.size = size\n",
@@ -1443,7 +1437,7 @@
         "    def updateresults(self, page, sort= None, order= None):\n",
         "        pass\n",
         "\n",
-        "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't.\n",
+        "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't be.\n",
         "    def __init__(self, imdbparams= None, search=\"\", category= None, results= None, attrs= None, sort= \"\", order= None, url= \"\", resultcount= 0,\n",
         "                 page= None, pageresultcount= 0, totalpages= 0, nextpage= -1, previouspage= -1) -> None:\n",
         "        super().__init__(search, category, results, attrs, sort, order, url, resultcount, page, pageresultcount, totalpages, nextpage, previouspage)\n",
@@ -1509,8 +1503,8 @@
         "        return self.table  \n",
         "\n",
         "    def applytablestyle(self):\n",
-        "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
-        "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))])\n",
+        "        self.table.style.apply(lambda s: [download_css for i in range(len(s))], subset=[' '])\n",
+        "        self.table.style.apply(lambda s: [wordwrap_css for i in range(len(s))])\n",
         "\n",
         "    def getresultcontrols(self):\n",
         "        sort_dropdown = Dropdown(description= \"Sort\", value= self.sort ,options= [(\"By User Rating\", IMDB_RATING_SORT), (\"By Date\", IMDB_DATE_SORT), (\"Alphabetically\", IMDB_ALPHABETICAL_SORT)], layout= {}, style= searchsortdropdowns_style)\n",
@@ -1522,25 +1516,27 @@
         "        return (sort_dropdown, order_dropdown, sort_btn, download_btn)\n",
         "    \n",
         "    def handlebulkdownload(self, btn):\n",
-        "        selectedrows = self.table.selection\n",
-        "        # set bulk download list in appstate\n",
+        "        appstate.bulksearch = [self.results[index].title_text for index in self.table.selection]\n",
+        "        \n",
         "        # call bulk download handle func\n",
         "        # handler pops next downloaditem, displays site decision view (temp) with handler\n",
         "        # on input handler searches in the site\n",
         "        # on download, adds donwloadload, pops next download item and shows site decesion view ()\n",
-        "        #display result\n",
+        "        # display result\n",
         "\n",
         "    def updateresults(self, page, sort= None, order= None):\n",
         "        if not sort:\n",
-        "            sort= self.imdbparams.imdbsort\n",
+        "            sort= self.sort\n",
         "        if not order:\n",
-        "            order= self.imdbparams.imdborder\n",
+        "            order= self.order\n",
         "        pagekey = getpagekey(sort, order, page)\n",
         "        if pagekey in self.resultpages:\n",
         "            self.results = self.resultpages[pagekey]\n",
         "            self.downloadedtitles = self.downloadedtitlespages[page]\n",
         "            self.watchedtitles = self.watchedtitlespages[page]\n",
         "            self.page = page\n",
+        "            self.sort = sort\n",
+        "            self.order = order\n",
         "            self.pageresultcount = len(self.results)\n",
         "            self.previouspage = page - 1\n",
         "            self.nextpage = page + 1 if page + 1 <= self.totalpages else 0\n",
@@ -1596,9 +1592,9 @@
         "        return self.table\n",
         "       \n",
         "    def applytablestyle(self):\n",
-        "        self.table.style.apply(lambda s : [\"color: #03ba00\" for i in range(len(s))], subset=['Seeders'])\n",
-        "        self.table.style.apply(lambda s : [\"color: #d40404\" for i in range(len(s))], subset=[\"Leechers\"])\n",
-        "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
+        "        self.table.style.apply(lambda s: [\"color: #03ba00\" for i in range(len(s))], subset=['Seeders'])\n",
+        "        self.table.style.apply(lambda s: [\"color: #d40404\" for i in range(len(s))], subset=[\"Leechers\"])\n",
+        "        self.table.style.apply(lambda s: [download_css for i in range(len(s))], subset=[' '])\n",
         "\n",
         "    def getresultcontrols(self):\n",
         "        sort_dropdown =  Dropdown(description= \"Sort\", value= self.sort, options = [('By Seeders', SEEDERSSORT), ('By Time', TIMESORT), ('By Size', SIZESORT)], layout= {}, style= searchsortdropdowns_style)\n",
@@ -1617,6 +1613,8 @@
         "            self.results = self.resultpages[pagekey]\n",
         "            self.pageresultcount = len(self.results)\n",
         "            self.page = page\n",
+        "            self.sort = sort\n",
+        "            self.order = order\n",
         "            self.previouspage = page - 1\n",
         "            self.nextpage = page + 1 if page + 1 <= self.totalpages else 0\n",
         "        else:\n",
@@ -1646,7 +1644,7 @@
         "            name.split(dgts[-1])[0]\n",
         "            year = dgts[-1]\n",
         "    table = name.maketrans(\"\",\"\",\" '(#$%-,.;:!?)\")\n",
-        "    return name.translate(table).lower() + year #if not show else name.translate(table).lower()\n",
+        "    return name.translate(table).lower() + year         # if not show else name.translate(table).lower()\n",
         "\n",
         "def get_year(name): \n",
         "    dgts = year_pt.findall(name.split('1080')[0])\n",
@@ -1693,7 +1691,6 @@
         "    return title(res)\n",
         "\n",
         "def name_show(name, quality = \"1080\"): \n",
-        "\n",
         "    if quality in name:\n",
         "        name = name.split(quality)[0]\n",
         "    elif \"720p\" in name:\n",
@@ -1776,7 +1773,6 @@
         "    if not targetshow.strip():\n",
         "        error('Show name is empty')\n",
         "        return\n",
-        "\n",
         "    info(f\"Checking if the season {targetseason} of {targetshow} is downloaded\")\n",
         "    showsearch = show_exists(targetshow)\n",
         "    targetpath = \"\"\n",
@@ -1832,7 +1828,6 @@
         "    return \"\"\n",
         "\n",
         "def rename_title(newname):\n",
-        "    print(f\"Renaming: {newname}\\nEnter title name for search or proceed:\")\n",
         "    inp = input().lower()\n",
         "    if inp:\n",
         "        words = inp.split()\n",
@@ -1854,10 +1849,8 @@
         "        for mv in res:\n",
         "            i += 1\n",
         "            print(f\"{i} {mv}\")       \n",
-        "        print(\"\\nChoose a title to rename:\\n\")\n",
         "        c = input()\n",
         "        if c == \"\" or c == \" \" or c == \"q\" or c == \"s\":\n",
-        "            print(\"No title was renamed.\\n\")\n",
         "            return\n",
         "        else:\n",
         "            try:\n",
@@ -1866,26 +1859,17 @@
         "                print(e)\n",
         "                return\n",
         "    else:\n",
-        "        print(\"No title was renamed.\\n\")\n",
         "        return\n",
-        "\n",
-        "    print(f\"Renaming: {title} to {newname} Confirm?\")\n",
         "    if input() != \"n\":\n",
         "        p0 = config.movies_path + \"/\" + title\n",
         "        p1 = config.movies_path + \"/\" + newname\n",
-        "        print(f\"Renaming: {p0}\")\n",
         "        !mv \"$p0\" \"$p1\"\n",
         "\n",
         "        for p3 in config.moviesbackups:\n",
         "            p0 = joinpath(p3, title)\n",
         "            if os.path.exists(p0):\n",
         "                p1 = joinpath(p3, newname) \n",
-        "                print(f\"Renaming backup: {p0}\")\n",
         "                !mv \"$p0\" \"$p1\"\n",
-        "\n",
-        "        print(\".....Rename done......\")\n",
-        "    else:\n",
-        "        print(\"No title was renamed.\\n\")\n",
         "\n",
         "def replace_download(path):\n",
         "    if path and os.path.exists(path):\n",
@@ -1901,11 +1885,9 @@
         "    search = check_sn_pt.search(attrs.name)\n",
         "    if search:\n",
         "        return SEASON  \n",
-        "\n",
-        "split_title_re = r\"[\\[\\]\\(]\"\n",
-        "\n",
+        "    \n",
         "def music_title(name: str):\n",
-        "    search = re.search(split_title_re, name)\n",
+        "    search = split_musictitle_pt.search(name)\n",
         "    if search:\n",
         "        name = name.split(search.group())[0]\n",
         "    splt = name.split(\"-\")\n",
@@ -2266,7 +2248,7 @@
         "def after_shave_movie(localsavingpath, newname, selectedfilenames= [], downloaded_diritems = []):\n",
         "    if not os.path.isdir(localsavingpath):\n",
         "        raise(Exception(f\"Path isn't a dir: {localsavingpath}\\nExists: {os.path.exists(localsavingpath)}\"))\n",
-        "    maindircontent = next(os.walk(localsavingpath)) #TODO fix bug\n",
+        "    maindircontent = next(os.walk(localsavingpath))                                 #       TODO fix bug\n",
         "    originaldiritems = [('', maindircontent[2])]\n",
         "    for dirname in maindircontent[1]:\n",
         "        if 'sub' in dirname.lower():\n",
@@ -2348,8 +2330,9 @@
         "    if not search:\n",
         "        newname = name_movie(name)\n",
         "        p1 = path\n",
-        "        p2 = movie_path + \"/\" + newname\n",
-        "        !mv \"$p1\" \"$p2\"\n",
+        "        p2 = f\"{movie_path}/{newname}\"\n",
+        "        cmd = f'mv \"{p1}\" \"{p2}\"'\n",
+        "        !$cmd\n",
         "        path = p2\n",
         "        print(newname)\n",
         "    after_shave_movie(path, newname)\n",
@@ -2367,18 +2350,20 @@
         "    dircontent = next(os.walk(path))[1]\n",
         "    if len(dircontent) != 0:\n",
         "        for dir in dircontent:\n",
-        "            p0 = path + \"/\" + dir\n",
+        "            p0 = f\"{path}/{dir}\"\n",
         "            if not has_size(p0, True):\n",
-        "                !rm -r \"$p0\"\n",
+        "                cmd = f'rm -r \"{p0}\"'\n",
+        "                !$cmd\n",
         "                continue\n",
         "            newname = get_season(dir, False)\n",
         "            if newname:\n",
         "                if newname != dir:\n",
-        "                    p0 =  path + \"/\" + dir\n",
-        "                    p1 = path + \"/\" + newname\n",
-        "                    !mv \"$p0\" \"$p1\"\n",
+        "                    p0 =  f\"{path}/{dir}\"\n",
+        "                    p1 = f\"{path}/{newname}\"\n",
+        "                    cmd = f'mv \"{p0}\" \"{p1}\"'\n",
+        "                    !$cmd\n",
         "                    dir = newname\n",
-        "            seasonpath = path + \"/\" + dir\n",
+        "            seasonpath = f\"{path}/{dir}\"\n",
         "            files = clean_season(seasonpath, keepChar)\n",
         "            item = (dir, files)\n",
         "            diritems.append(item)\n",
@@ -2398,24 +2383,24 @@
         "        splitted = os.path.splitext(file)\n",
         "        eps = splitted[0]\n",
         "        ext = splitted[1]\n",
-        "        p1 = path + \"/\" + file\n",
+        "        p1 = f\"{path}/{file}\"\n",
         "        if ext == \".mkv\" or ext == \".mp4\" or ext == \".srt\":\n",
         "            newname = name_episode(eps, keepDot= keepDot) + ext\n",
         "            if newname != file:\n",
-        "                p2 = path + \"/\" + newname\n",
-        "                !mv \"$p1\" \"$p2\" \n",
+        "                p2 = f\"{path}/{newname}\"\n",
+        "                cmd = f'mv \"{p1}\" \"{p2}\"'\n",
+        "                !$cmd\n",
         "            clean.append(newname)\n",
         "        elif any(contains(file.lower(), check) for check in skip_list):\n",
-        "            !rm \"$p1\" \n",
+        "            cmd = f'rm \"{p1}\"'\n",
+        "            !$cmd\n",
         "    info(f'Cleaned files: {len(clean)}')   \n",
         "    return clean\n",
         "\n",
         "#### API / IMDB \n",
         "\n",
         "from math import ceil\n",
-        "\n",
         "linkhtmlstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
-        "\n",
         "def process_external_link(title, suff_text= \"\", base= \"\"):\n",
         "    if title:\n",
         "        title = str(title)\n",
@@ -2455,7 +2440,8 @@
         "            lists = (lists + \",\" if lists else lists) + config.animation_titles_list \n",
         "    \n",
         "    sortandorder = imdbparams.imdbsort\n",
-        "    if imdbparams.imdborder == ASCORDER:   sortandorder = sortandorder + \",asc\"\n",
+        "    if imdbparams.imdborder == ASCORDER:   \n",
+        "        sortandorder = sortandorder + \",asc\"\n",
         "    else:   sortandorder = sortandorder + \",desc\" \n",
         "    releasedates = f\"&release_date={imdbparams.startdate},{imdbparams.enddate}\" if imdbparams.startdate or imdbparams.enddate else ''\n",
         "    ratings = f\"&user_rating={imdbparams.minrating if imdbparams.minrating else ''},{imdbparams.maxrating if imdbparams.maxrating else ''}\" if imdbparams.minrating or imdbparams.maxrating else ''\n",
@@ -2468,13 +2454,15 @@
         "        result = IMDBResult(search= imdbparams.keyword, imdbparams= imdbparams, url= url, sort=imdbparams.imdbsort,\n",
         "                            order= imdbparams.imdborder, attrs= imdbparams.attrs)\n",
         "        appstate.searchresults.append(result)\n",
-        "    req = requests.get(url, headers = {\"Accept-Language\": \"en-US\"})\n",
+        "    response = requests.get(url, headers = {\"Accept-Language\": \"en-US\"})\n",
         "    result.currentpageurl = url\n",
         "    result.page = page\n",
-        "    result.request = req \n",
-        "    if req.status_code == 200:\n",
+        "    result.sort = imdbparams.imdbsort\n",
+        "    result.order = imdbparams.imdborder\n",
+        "    result.request = response \n",
+        "    if response.status_code == 200:\n",
         "        info(\"\\n IMDB Search Done Successfully.\\n\")\n",
-        "        soup = Soup(req.text,'html.parser')    \n",
+        "        soup = Soup(response.text,'html.parser')    \n",
         "        main = soup.find(\"div\", id= \"main\")\n",
         "        if not main :\n",
         "            error(\"AdvancedIMDBSearch: Error: An error occured while performing the web scrapping.\")\n",
@@ -2541,7 +2529,7 @@
         "        result.watchedcount = len(watched)\n",
         "        result.status = SUCCUSS\n",
         "    else:\n",
-        "        result.error = f\"AdvancedIMDBSearch: Error accessing the web page. Code error: {req.state_code}\"\n",
+        "        result.error = f\"AdvancedIMDBSearch: Error accessing the web page. Code error: {response.status_code}\"\n",
         "        error(result.error)\n",
         "        result.status = FAIL\n",
         "    release()\n",
@@ -2561,17 +2549,12 @@
         "    pyver = platform.python_version()\n",
         "    return f'{app_id}/{version} ({uname}) python {pyver}'\n",
         "\n",
-        "def request(method, url, params=None):\n",
+        "def rarbgrequest(method, url, params=None):\n",
         "    info(f\"Request {method}@{url}\\nParams: {params}\")\n",
         "    if not params:\n",
         "        params = {}\n",
-        "    params.update({\n",
-        "        'app_id': app_id\n",
-        "    })\n",
-        "\n",
-        "    headers = {\n",
-        "        'user-agent': user_agent\n",
-        "    }\n",
+        "    params.update({'app_id': app_id})\n",
+        "    headers = {'user-agent': user_agent}\n",
         "    sess = requests.Session()\n",
         "    req = requests.Request(method, url, params=params, headers=headers)\n",
         "    preq = req.prepare()\n",
@@ -2582,10 +2565,8 @@
         "\n",
         "def rarbg_token():\n",
         "    info('Refreshing rarbg token.')\n",
-        "    params = {\n",
-        "        'get_token': 'get_token'\n",
-        "    }\n",
-        "    res = request('GET', rarbg_api, params)\n",
+        "    params = {'get_token': 'get_token'}\n",
+        "    res = rarbgrequest('GET', rarbg_api, params)\n",
         "    json_res = res.json() if res and res.status_code == 200 else None\n",
         "    if json_res and 'token' in json_res:\n",
         "        info(\"Rarbg token successfully refreshed.\")\n",
@@ -2601,24 +2582,21 @@
         "    info(f\"Searching for: {key} {imdb} in categories: {catstr}\")\n",
         "    category = ''\n",
         "    params = {'mode': 'search','token': token}\n",
-        "\n",
         "    if key:\n",
         "        params['search_string'] = key\n",
         "    elif imdb:\n",
         "        params['search_imdb'] = imdb\n",
         "    else:\n",
         "        return None\n",
-        "    \n",
         "    if categories:\n",
         "        category = str(categories[0])\n",
         "        for i in range(1, len(categories)):\n",
         "            category += ';' + str(categories[i])\n",
         "        params['category'] = category \n",
-        "\n",
         "    if sort:\n",
         "        params['sort'] = sort\n",
         "    try:\n",
-        "        res = request('GET', rarbg_api, params)\n",
+        "        res = rarbgrequest('GET', rarbg_api, params)\n",
         "        json_res = res.json() if res.status_code == 200 else None\n",
         "    except Exception as e:\n",
         "        error(ex())\n",
@@ -2634,9 +2612,8 @@
         "            params['token'] = token\n",
         "            time.sleep(1)\n",
         "            info(f\"Retrying search for: {key} {imdb}\")\n",
-        "            res = request('GET', rarbg_api, params)\n",
+        "            res = rarbgrequest('GET', rarbg_api, params)\n",
         "            json_res = res.json() if res.status_code == 200 else None  \n",
-        "\n",
         "        if json_res and 'torrent_results' in json_res:\n",
         "            results = []\n",
         "            for rs in json_res['torrent_results']:\n",
@@ -2654,7 +2631,6 @@
         "    info(f\"Searching for {search} in rarbg.com.\")\n",
         "    print(f\"\\nSearching for:  {search} in rarbg.com.\\n\")\n",
         "    rarbgsort = magnet = name = \"\"\n",
-        "\n",
         "    if category == MOVIESCATEGORY_TD:\n",
         "        all_cat = RARBG_MOVIE\n",
         "        categories = RARBG_MOVIE\n",
@@ -2664,27 +2640,22 @@
         "    else:\n",
         "        all_cat = None\n",
         "        categories = None\n",
-        "\n",
         "    rarbgsort = SORTRARBG_SEEDERS  \n",
         "    if sort == TIMESORT:\n",
         "        rarbgsort = SORTRARBG_TIME\n",
-        "\n",
         "    results: list[DownloadResult]\n",
         "    state = 1                                 # 1 init, 2 edit & redo search, 0 done, -1 bad search\n",
         "    while state != 0 :\n",
-        "\n",
         "        if state == 1:\n",
         "            results = rarbg_rip(key = search, categories = categories, sort = rarbgsort)\n",
         "            if not results and categories and state != 2 :    \n",
         "                results = rarbg_rip(key = search, sort = rarbgsort)\n",
         "            state = 3\n",
-        "\n",
         "        elif state == 2:\n",
         "            link = f\"https://rarbgenter.org/torrents.php?search={search.replace(' ', '+')}\"\n",
         "            warning(f\"Searching for {search} in rarbg.com. No results were found. Please check the link to ensure the results.\\n{link}\")\n",
         "            print(f\"No results were found. Please check the link to ensure the results.\\n{link}\\n\\nEnter e:[search] to edit, m:[magnet] to add magnet directly:, i < 7 to exit:\\n\")\n",
         "            newinput = input()\n",
-        "\n",
         "            if len (newinput) < 7:\n",
         "                return -1\n",
         "\n",
@@ -2699,12 +2670,10 @@
         "                    updatestatushtml('An error happend while searhcing Rarbg.', ERROR_EVENT)\n",
         "                results = None\n",
         "                state = 4\n",
-        "\n",
         "            elif newinput.startswith(\"e:\"):\n",
         "                newinput = newinput[2:]\n",
         "                results = rarbg_rip(key = newinput, sort = rarbgsort)\n",
         "                state = 1\n",
-        "\n",
         "        if results: \n",
         "            print(\"\\n     {:<70}{:>10}{:>10}\\n\".format(\"Title\", \"Size\", \"Seeders\"))\n",
         "            for i in range(len(results)):\n",
@@ -2713,7 +2682,6 @@
         "                magnet = results[0].magnet\n",
         "                name = results[0].title\n",
         "                state = 4\n",
-        "\n",
         "            else:\n",
         "                print(\"\\nPlease choose one of the results to download             Format [single]     Enter q to exit, e to edit the search:\")\n",
         "                choice = -1\n",
@@ -2724,10 +2692,9 @@
         "                    elif choice == \"e\":\n",
         "                        state = 2\n",
         "                        break\n",
-        "                      \n",
         "                    choice = int(choice) - 1\n",
         "                    if choice < 0 or choice >= len(results):\n",
-        "                        print(\"\\nChoice out of range.\")\n",
+        "                        info(\"\\nChoice out of range.\")\n",
         "                        choice = -1\n",
         "                if state == 2:\n",
         "                    continue\n",
@@ -2736,7 +2703,6 @@
         "                    name = results[choice].title\n",
         "                    results = None\n",
         "                    state = 4\n",
-        "\n",
         "        if state == 4:      \n",
         "            attrs.site_source = RARBG\n",
         "            attrs.name = name\n",
@@ -3070,6 +3036,7 @@
         "        for i in items:\n",
         "            path = delpath +\"/\"+ content[i] if content else delpath\n",
         "            replace_download(path)\n",
+        "            \n",
         "            if process_backup and False: #fixbackup\n",
         "                for i in range(1,4):\n",
         "                    pt = \"bk path\"\n",
@@ -4708,7 +4675,7 @@
         "imdbruntime_hbox = HBox((imdbruntime_label, imdbminruntime_int, imdbmaxruntime_int), layout= t_formrow_layout)\n",
         "imdbruntime_label.add_class('label-flex')\n",
         "\n",
-        "imdbinlist_text = Text(description= \"In Lists\", value= \"\", placeholder= \"Comma separated list.\", layout= t2controls_layout, style= t2controls_style)\n",
+        "imdbinlist_text = Text(description= \"In Lists\", value= config.watch_list, placeholder= \"Comma separated list.\", layout= t2controls_layout, style= t2controls_style)\n",
         "imdbinlist_hbox = HBox((imdbinlist_text,),layout= t_formrow_layout)\n",
         "\n",
         "imdbnotinlist_text = Text(description= \"Not In List\", value= \"\", placeholder= \"Comma separated list.\", layout= t2controls_layout, style= t2controls_style)\n",
@@ -5252,21 +5219,38 @@
         "    result.filetable.patch(patch)\n",
         "    updateoutput(result.filetableoutput, result.filetable)\n",
         "\n",
-        "def replace_download_decision(prep_res: Prepare_Result):\n",
-        "    userinput_layout = {'width':'600px', 'height':'350px', 'align_items': 'center', 'justify_content': 'flex-start', 'padding': '50px 20px 0 20px', 'border': f'2px solid {LIGHTGREY_COLOR}'}\n",
-        "    userinputbtn_layout = {'min_width': '100px', 'height':'50px'}\n",
-        "    message_html = HTML(gethtmltext(f'The {prep_res.typestr} \"{prep_res.attrs.name}\" is already downloaded and saved as: {prep_res.foundpath}<br>Do you want to replace old file or rename new download?', fontsize= '16px', color= DARKGERYCOLOR))\n",
-        "    row1userinput_box = Box((message_html,), layout= {'width':'99%', 'height':'auto', 'padding':'0 30px', 'margin':'0 0 20px 0'})\n",
+        "## User Input\n",
         "\n",
+        "userinput_layout = {'width':'800px', 'height':'350px', 'align_items': 'center', 'justify_content': 'flex-start', 'padding': '50px 20px 0 20px', 'border': f'2px solid {LIGHTGREY_COLOR}'}\n",
+        "userinputbtn_layout = {'min_width': '100px', 'height':'50px'}\n",
+        "userinputrow1_layout = {'width':'99%', 'height':'auto', 'padding':'0 30px', 'margin':'0 0 20px 0'}\n",
+        "userinputrow2_layout = {'justify_content':'space-around','padding':'0 50px', 'margin':'0 0 15px 0', 'width':'100%', 'align_items': 'center'}\n",
+        "userinputrow3_layout = {'display':'none','justify_content':'space-around','padding':'0 60px','width':'100%', 'align_items': 'center'}\n",
+        "userinputtext_layout = {'width':'350px '}\n",
+        "userinputtextbtn_layout = {'height':'30px', 'width':'60px'}\n",
+        "userinputview_layout = {'width':'100%', 'height':'100%','align_items': 'center', 'padding':'120px 0 0 0'}\n",
+        "\n",
+        "def userdecisionview(inputviewchildren):\n",
+        "    userinputview_vbox = VBox(inputviewchildren, layout= userinputview_layout)\n",
+        "    userinputview_vbox.name = \"User Decision\"\n",
+        "    return userinputview_vbox\n",
+        "\n",
+        "def userinputbox(inputrows):\n",
+        "    userinput_vbox = VBox(inputrows, layout= userinput_layout)\n",
+        "    userinput_vbox.add_class('curved-20')\n",
+        "    return userinput_vbox\n",
+        "\n",
+        "def replace_download_decision(prep_res: Prepare_Result):\n",
+        "    message_html = HTML(gethtmltext(f'The {prep_res.typestr} \"{prep_res.attrs.name}\" is already downloaded and saved as: {prep_res.foundpath}<br>Do you want to replace old file or rename new download?', fontsize= '16px', color= DARKGERYCOLOR))\n",
+        "    row1userinput_box = Box((message_html,), layout= userinputrow1_layout)\n",
         "    replaceoption_btn = Button(description= \"Replace\", layout= userinputbtn_layout)\n",
         "    mergeoption_btn = Button(description= \"Merge\", layout= userinputbtn_layout)\n",
         "    canceloption_btn = Button(description= \"Cancel Download\", layout= userinputbtn_layout)\n",
         "    rename_btn = Button(description= \"Rename New File\", layout= userinputbtn_layout)\n",
-        "    row2userinput_hbox = HBox((mergeoption_btn, replaceoption_btn, canceloption_btn, rename_btn), layout= {'justify_content':'space-around','padding':'0 50px', 'margin':'0 0 15px 0', 'width':'100%', 'align_items': 'center'})\n",
-        "\n",
-        "    newname_text = Text(description= \"New file name: \",style={'description_width': '100px'}, layout= {'width':'350px ', 'description_width':'120px'})\n",
-        "    savename_btn = Button(description= \"OK\", disabled= True, layout= {'height':'30px', 'width':'60px'})\n",
-        "    row3userinput_hbox = HBox((newname_text, savename_btn), layout= {'display':'none','justify_content':'space-around','padding':'0 60px','width':'100%', 'align_items': 'center'})\n",
+        "    row2userinput_hbox = HBox((mergeoption_btn, replaceoption_btn, canceloption_btn, rename_btn), layout= userinputrow2_layout)\n",
+        "    newname_text = Text(description= \"New file name: \",style={'description_width': '100px'}, layout= userinputtext_layout)\n",
+        "    savename_btn = Button(description= \"OK\", disabled= True, layout= userinputtextbtn_layout)\n",
+        "    row3userinput_hbox = HBox((newname_text, savename_btn), layout= userinputrow3_layout)\n",
         "    rename_btn.on_click(lambda b: showview(row3userinput_hbox))\n",
         "\n",
         "    def handletextinputchange(change):\n",
@@ -5284,13 +5268,14 @@
         "    mergeoption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(MERGE_DOWNLOAD), prep_res.attrs))\n",
         "    canceloption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(CANCEL_DOWNLOAD), prep_res.attrs))\n",
         "    savename_btn.on_click(renamedownloadaction)\n",
+        "    userinput_vbox = userinputbox((row1userinput_box, row2userinput_hbox, row3userinput_hbox))\n",
+        "    switchview(nav[ADD_TAB], nextview= userdecisionview((userinput_vbox,)), temp= True)\n",
         "\n",
-        "    userinput_vbox = VBox((row1userinput_box, row2userinput_hbox, row3userinput_hbox), layout= userinput_layout)\n",
-        "    userinput_vbox.add_class('curved-20')\n",
-        "    userinputview_vbox = VBox((userinput_vbox,), layout= {'width':'100%', 'height':'100%','align_items': 'center', 'padding':'120px 0 0 0'})\n",
-        "    userinputview_vbox.name = \"User Decision.\"\n",
-        "    switchview(nav[ADD_TAB], nextview= userinputview_vbox, temp= True)\n",
-        "    return \n",
+        "def searchsitedecisionview():\n",
+        "    \n",
+        "    return\n",
+        "\n",
+        "##\n",
         "\n",
         "def updatestatushtml(message: str= '' , event= INFO_EVENT, animated= False, temp= True):\n",
         "    if not message:\n",
@@ -5328,17 +5313,14 @@
         "    control_btn = Button(description= \"∣∣\", layout= {'width':'28px', 'height':'29px', 'padding': '0px 1px 2px 2px', 'margin': '0 6px 6px 18px'})\n",
         "    info_btn = Button(description= \"i\", layout= {'width':'28px', 'height':'29px', 'padding': '1px', 'margin': '0 5px 0 0'})\n",
         "    remove_btn = Button(description= \"✕\", layout= {'width':'28px', 'height':'29px', 'padding': '1px', 'margin': '0 20px 0 0'})\n",
-        "\n",
         "    status_label = Label(value= \"Downloading\", layout= layout_2)\n",
         "    type_label = Label(value= types[handle.attrs.type_], layout= layout_2)\n",
         "    speed_label = Label(value= f\"Rate {whitespace3}↓ {speed_str(status.download_rate)}{whitespace3}↑ {speed_str(status.upload_rate)}\", layout= layout_4)\n",
         "    transfered_label = Label(value= f\"Transfered {whitespace3}↓ {data_str(status.total_wanted_done)}{whitespace3}↑ {data_str(status.total_upload)}\", layout= layout_4)\n",
         "    remaining_label = Label(value= f\"Remaining {whitespace3}{data_str(status.total_wanted - status.total_wanted_done)} / {data_str(status.total_wanted)}\" , layout= layout_4)\n",
         "    eta_label = Label(value= get_eta(status), layout= layout_2)\n",
-        "\n",
         "    downloadrow1box = Box((title_label, progress_label, progress_bar, empty_label_1), layout = mointorview1r3_layout)\n",
         "    downloadrow2box = Box((control_btn, info_btn, remove_btn, status_label, type_label, speed_label, transfered_label, remaining_label, eta_label), layout= mointorview1r3_layout)\n",
-        "\n",
         "    downloadvbox = VBox((downloadrow1box,downloadrow2box), layout= monitordownload_layout)\n",
         "    downloadvbox.add_class('curved-20')\n",
         "    downloadvbox.title_label = title_label\n",
@@ -5471,12 +5453,10 @@
         "def load_download(Load_From):\n",
         "    Local = False   \n",
         "    Type = MOVIE  \n",
-        "\n",
         "    Category = MOVIESCATEGORY_TD  \n",
         "    Sort = \"By Seeders\"   \n",
         "    Order = \"Descending\"  \n",
         "    Backup = True  \n",
-        "\n",
         "    sort = TIMESORT\n",
         "    if Sort == TIMESORT:\n",
         "        if Order == \"Descending\":\n",
@@ -5488,7 +5468,6 @@
         "            sort = X1337X_SIZE_DESC\n",
         "        else:\n",
         "            sort = X1337X_SIZE_ASC\n",
-        "\n",
         "    try:\n",
         "        if Load_From:\n",
         "            load_uncompleted(Load_From, type_ = MOVIE)\n",
@@ -5558,15 +5537,15 @@
         "        'tracker_completion_timeout':Tracker_Completion_Timeout,\n",
         "        'upload_rate_limit':Upload_Rate_Limit_KB*1024,\n",
         "        'user_agent': User_Agent,\n",
-        "        #'inactivity_timeout':20,\n",
-        "        #'ban_web_seeds':False,\n",
+        "        #'inactivity_timeout':20,  \n",
+        "        #'ban_web_seeds':False   \n",
         "        }\n",
         "    ses.apply_settings(sett)    \n",
         "    settings = ses.get_settings()\n",
         "    setn =[]\n",
         "    for x in settings:\n",
         "        setn.append(str(x))\n",
-        "    setn.sort()\n",
+        "    setn.sort() \n",
         "\n",
         "def clear_temp_pathes():\n",
         "    Delete_torrent_files = True \n",
