--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -366,8 +366,8 @@
         "    info(f\"Scrapping watched movies list from IMDB. URL:{watched_list_url}.\")\n",
         "    try:\n",
         "        for i in range(startpage-1, endpage):\n",
-        "            currentpage = watched_list_url + str(i*251)\n",
-        "            imdbresponse = requests.get(currentpage, headers = {\"Accept-Language\": \"en-US\"})\n",
+        "            currentpageurl = watched_list_url + str(i*251)\n",
+        "            imdbresponse = requests.get(currentpageurl, headers = {\"Accept-Language\": \"en-US\"})\n",
         "            soup = Soup(imdbresponse.text,'html.parser')    \n",
         "            scrape = soup.find(\"div\", {\"class\":\"lister-list\"})\n",
         "            if not scrape :\n",
